# hid

./: Cargo.toml  config.json
mouse2joystick-bin/: Cargo.toml
mouse2joystick-bin/src/: main.rs
mouse2joystick-lib/: Cargo.toml
mouse2joystick-lib/src/: input_device.rs  input_device_pool.rs  lib.rs  uinput.rs
src/: input_device.rs  input_device_pool.rs  main.rs  uinput.rs
