[package]
name = "hid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
evdev-rs = "0.6.1"
evdev-sys = "0.2.5"
mio = "0.8.6"
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"
udev = { version = "0.7.0", features = ["mio"] }
