[package]
name = "mouse2joystick-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
evdev = "0.12.1"
inotify = "0.10.0"
mio = { version = "0.8.6", features = ["os-ext"] }
mouse2joystick-lib = {path = "../mouse2joystick-lib/"}
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"
