[package]
name = "mouse2joystick-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.12.1"
inotify = "0.10.0"
mio = { version = "0.8.6", features = ["os-ext"] }
nix = "0.26.2"
serde = { version = "1.0.159", features = ["derive"] }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[lib]
crate-type = ["dylib"]
